--- a/deck.mdx
+++ b/deck.mdx
@@ -35,9 +35,9 @@ Professional software developer since 1991.
 
 15 yr C/C++ client-server dev: factory automation and futures/options trading.
 
-12+ yr web dev: Python, JavaScript, Angular, VueJS, and Postgres
+12+ yr web dev: Python, JavaScript, Angular, VueJS
 
-20+ yr hobby: dog agility and web dev: agilitynerd.com,  tech.agilitynerd.com, googility.com, agilitycourses.com & agilitycoursemaster.com
+20+ yr hobby: dog agility and web dev: [agilitynerd.com](https://www.agilitynerd.com),  [tech.agilitynerd.com](https://tech.agilitynerd.com), [googility.com](https://googility.com), [agilitycourses.com](https://agilitycourses.com) & [agilitycoursemaster.com](https://agilitycoursemaster.com)
 
 </div>
 
@@ -117,12 +117,16 @@ import jamstack from './images/jamstack.png'
 https://jamstack.org
 
 ---
+import gatsbyicon from './images/Gatsby_Monogram.png'
+
+<Image src={gatsbyicon} size='contain' style="display:block;height:200px"/>
 
 ## Gatsby JS
 
-Open source https://gatsbyjs.org
-
-Supported by commercial offerings https://gatsbyjs.com
+- Open source: https://gatsbyjs.org
+- Created by Kyle Mathews [@kylemathews](https://twitter.com/kylemathews)
+- MIT License
+- Supported by services: https://gatsbyjs.com
 
 ---
 
@@ -307,21 +311,21 @@ Use 3rd Party Components
 
 <div>
 
-- Client-side:
-  - Analytics
-  - Search
-  - Offline mode
-
-</div>
-
-<div>
-
 - During generation:
   - Manifest
   - RSS Feeds
   - Image Processing
   - SASS
   - Sitemap
+
+</div>
+
+<div>
+
+- Client-side:
+  - Analytics
+  - Search
+  - Offline mode
 
 </div>
 
