More styling changes

--- a/deck.mdx
+++ b/deck.mdx
@@ -154,9 +154,9 @@ import gatsbyicon from './images/Gatsby_Monogram.png'
 [agilitynerd.com](https://www.agilitynerd.com)
 
 - Lighthouse performance score
-- Image blur up
-- Prefetch links on scroll
-- Progressive Web App
+- Image blur up on load
+- Prefetches linked content on scroll
+- Progressive Web App (PWA)
 
 ---
 
