--- a/deck.mdx
+++ b/deck.mdx
@@ -103,7 +103,7 @@ import legacyagilitynerd from './images/legacy-agilitynerd.png'
 
 import jamstack from './images/jamstack.png'
 
-<Image src={jamstack} size="contain" style={{height: '100vh'}}/>
+<Image src={jamstack} size="contain" style={{height: '100vh', zIndex: 10}}/>
 
 ---
 
@@ -119,13 +119,14 @@ https://jamstack.org
 ---
 import gatsbyicon from './images/Gatsby_Monogram.png'
 
-<Image src={gatsbyicon} size='contain' style="display:block;height:200px"/>
+<Image src={gatsbyicon} size='contain' style="display:block;height:150px"/>
 
 ## Gatsby JS
 
 - Open source: https://gatsbyjs.org
 - Created by Kyle Mathews [@kylemathews](https://twitter.com/kylemathews)
-- MIT License
+- MIT license
+- Great documentation!
 - Supported by services: https://gatsbyjs.com
 
 ---
@@ -162,7 +163,7 @@ import gatsbyicon from './images/Gatsby_Monogram.png'
 
 import howgatsbyworks from './images/how-gatsby-works.png'
 
-<Image src={howgatsbyworks} size="contain" style={{height: '100vh'}}/>
+<Image src={howgatsbyworks} size="contain" style={{height: '99vh', zIndex: 10}}/>
 
 ---
 
@@ -344,12 +345,14 @@ Use 3rd Party Components
 
 ## Gatsby Themes
 
+- Packages reusable plugins, styling, queries
+- More than a traditional "theme"
+
 ---
 
 ## Gatsby Future
 
 - Gatsby Cloud
-
 - Large site performance
 
 ---
