--- a/deck.mdx
+++ b/deck.mdx
@@ -131,7 +131,7 @@ import gatsbyicon from './images/Gatsby_Monogram.png'
 
 ---
 
-## Fits the JAMStack model:
+## Gatsby and the JAMStack model:
 - Combines multiple data sources
 - Unified data access model: GraphQL
 - Generate all pages at build time
@@ -185,28 +185,27 @@ https://github.com/gatsbyjs/gatsby-starter-blog
 
 ## Data Source Plugins Provide Content
 
-- Markdown, YAML, CSV, JSON, etc. from files
+- Markdown, MDX (Markdown + JSX), YAML, CSV, JSON, etc. from files
 - Images
 - Content Management Systems
-- Twitter, FB, GitHub feeds
-- Configured in `gatsby-config.js`
-
----
-
-## Using Data Sources
-
-- Gatsby data sources create GraphQL nodes
-- Query the data via GraphQL
-- Interactive testing via GraphiQL explorer:
+- Twitter, FB, GitHub, Instagram feeds
 - Over 400 data source plugins:
 
 https://www.gatsbyjs.org/plugins/?=source
 
 ---
 
+## Using Data Sources
+
+- Configured in `gatsby-config.js`
+- Gatsby uses data sources to create GraphQL nodes
+
+---
+
 ## Generate pages using Gatsby API
 
-- Use GraphQL to query the source plugins' nodes
+- Call Gatsby's `createPage()` with GraphQL results
+- Make Gatsby API calls in `gatsby-node.js`
 
 ---
 
@@ -248,13 +247,6 @@ exports.createPages = async ({ graphql, actions }) => {
 ## Test/Fine Tune GQL Queries
 
 [GraphiQL](http://localhost:8000/___graphql?query=query%20MyQuery%20%7B%0A%20%20allMdx(sort%3A%20%7Bfields%3A%20%5Bfrontmatter___date%5D%2C%20order%3A%20DESC%7D%2C%20filter%3A%20%7Bfrontmatter%3A%20%7Bdate%3A%20%7Bne%3A%20null%7D%2C%20draft%3A%20%7Bne%3A%20true%7D%7D%7D)%20%7B%0A%20%20%20%20edges%20%7B%0A%20%20%20%20%20%20node%20%7B%0A%20%20%20%20%20%20%20%20id%0A%20%20%20%20%20%20%20%20fields%20%7B%0A%20%20%20%20%20%20%20%20%20%20slug%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20frontmatter%20%7B%0A%20%20%20%20%20%20%20%20%20%20title%0A%20%20%20%20%20%20%20%20%20%20date%0A%20%20%20%20%20%20%20%20%20%20tags%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%7D%0A%20%20%20%20%7D%0A%20%20%7D%0A%20%20tagsGroup%3A%20allMdx(filter%3A%20%7Bfrontmatter%3A%20%7Bdate%3A%20%7Bne%3A%20null%7D%2C%20draft%3A%20%7Bne%3A%20true%7D%7D%7D)%20%7B%0A%20%20%20%20group(field%3A%20frontmatter___tags)%20%7B%0A%20%20%20%20%20%20fieldValue%0A%20%20%20%20%7D%0A%20%20%7D%0A%7D%0A&operationName=MyQuery)
-
----
-
-##  Create Pages
-
-- Call Gatsby's `createPage()` with GraphQL results
-- Make Gatsby API calls in `gatsby-node.js`
 
 ---
 
@@ -304,6 +296,8 @@ Create your own:
 
 Use 3rd Party Components
 
+Gatsby + MDX => components in your Markdown
+
 ---
 
 ## Plugins Can Do More
@@ -313,11 +307,12 @@ Use 3rd Party Components
 <div>
 
 - During generation:
-  - Manifest
   - RSS Feeds
   - Image Processing
   - SASS
   - Sitemap
+  - Robots.txt
+  - Manifest
 
 </div>
 
@@ -327,6 +322,7 @@ Use 3rd Party Components
   - Analytics
   - Search
   - Offline mode
+  - Crash monitoring
 
 </div>
 
