Clarify api calls

--- a/deck.mdx
+++ b/deck.mdx
@@ -204,8 +204,9 @@ https://www.gatsbyjs.org/plugins/?=source
 
 ## Generate pages using Gatsby API
 
-- Call Gatsby's `createPage()` with GraphQL results
-- Make Gatsby API calls in `gatsby-node.js`
+- In `gatsby-node.js`:
+  - Export `createPages` function that builds all pages
+  - Call Gatsby's `createPage()` with GraphQL results
 
 ---
 
