Remove more slides

--- a/deck.mdx
+++ b/deck.mdx
@@ -222,7 +222,7 @@ https://jamstack.org
 - Progressive Web App (PWA)
 
 ---
-
+<!--
 ## Gatsby:
 - Combines multiple data sources
 - Unified data access model: GraphQL
@@ -230,6 +230,8 @@ https://jamstack.org
 - React eco-system goodness
 
 ---
+-->
+
 import howgatsbyworks from './images/how-gatsby-works.png'
 
 <Image src={howgatsbyworks} size="contain" style={{height: '99vh', zIndex: 10}}/>
@@ -261,7 +263,6 @@ https://github.com/gatsbyjs/gatsby-starter-blog
 ## Data Source Plugins Provide Content
 
 - Markdown, MDX (Markdown + JSX), YAML, CSV, JSON, etc. from files
-- Images
 - Content Management Systems
 - Twitter, FB, GitHub, Instagram feeds
 - Over 400 data source plugins:
@@ -406,7 +407,6 @@ Gatsby + MDX => components in your Markdown
 
 </SplitLeftAlign>
 
-
 ---
 
 ## Deploy
@@ -414,10 +414,11 @@ Gatsby + MDX => components in your Markdown
 - Gatsby sites only need static hosting!
 - GitHub pages, AWS, Azure, Zeit, Netlify, Cloudflare, Google Cloud, etc.
 - Trigger build via Git commit hook
-- Auto deploy
+- Auto deploys after build
 
 ---
 
+<!--
 ## Gatsby Themes
 
 - Packages reusable plugins, styling, queries
@@ -431,6 +432,7 @@ Gatsby + MDX => components in your Markdown
 - Large site performance
 
 ---
+-->
 
 ## Use Gatsby For:
 
